welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {

   val pasla = 0;
   var nbVal = 0;
   for (i <-1 to 4) {
   while ({nums(pos) != lookingFor}&&{pos != nums.length-1}) {
   	pos = pos + 1;
   }
   nbVal = nbVal + 1;
   }
   if ( nums(pos) == lookingFor ) {
   	pos;
   } else {
   	pasla;
   }
   
}
